--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -46,7 +46,14 @@ func (c *$(className)Context) BeforeHandler() (continueToHandler bool) {
 		return false
 	}
 
-	return c.User.HasPermission(Perm_$(className).Hash())
+	if c.User.HasPermission(Perm_$(className).Hash()) {
+		return true
+	}
+
+	c.Context.Write([]byte("No Permision"))
+	c.Context.Forbidden()
+
+	return false
 }
 
 func init() {
