--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -28,7 +28,7 @@ import (
 )
 
 var (
-	Perm_$(className) = permission.New("$obj.scope", "$(obj.label)")
+	Perm_$(className) = permission.New("$obj.scope", "$(obj.perm)")
 )
 
 type $(className)Context struct {
