--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -265,13 +265,13 @@ func $(className)Create(ctx *$(className)Context) (html string) {
 		obj = m_$(modelsNamespace).New$(className)FromBytes(data)
 		obj.ValidateData()
 		ctx.ClearSession("$(className)Create")
-		#if $obj.createtpl != None
-		return $(obj.createtpl).Create(ctx.Context, obj, "建立$(obj.label)")
+		#if $obj.createtpl == "axure"
+		return autoTpl.AxureCreate(ctx.Context, models.New$(className)(), "建立$(obj.label)")
 		#else
 		return autoTpl.Create(ctx.Context, obj.Widgets(), "建立$(obj.label)")
 		#end if
 	}
-	#if $obj.createtpl != None
+	#if $obj.createtpl == "axure"
 	return autoTpl.AxureCreate(ctx.Context, m_$(modelsNamespace).New$(className)(), "建立$(obj.label)")
 	#else
 	return autoTpl.Create(ctx.Context, m_$(modelsNamespace).New$(className)().Widgets(), "建立$(obj.label)")
