--- a/tmpl/go.tmpl
+++ b/tmpl/go.tmpl
@@ -86,6 +86,7 @@ type $obj.name.value struct {
 		#end if
 	#end for
 	widgets map[string]*Widget
+	isNew bool
 }
 
 func (p *$obj.name.value) GetNameSpace() string {
@@ -97,19 +98,12 @@ func (p *$obj.name.value) GetClassName() string {
 }
 
 func new$(obj.name.value)XuanWuObj() IXuanWuObj {
-	rval := new($obj.name.value)
-	rval.ID = bson.NewObjectId()
-	#for field in $obj.fields
-		#if $field.defaultValue
-			rval.$field.name.value = "$field.defaultValue"
-		#end if
-	#end for
-
-	return rval
+	return New$(obj.name.value)()
 }
 
 func New$(obj.name.value)() *$obj.name.value {
 	rval := new($obj.name.value)
+	rval.isNew = true
 	rval.ID = bson.NewObjectId()
 	#for field in $obj.fields
 		#if $field.defaultValue
