Add special rule for currentUser

--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -271,13 +271,20 @@ func $(className)Create(ctx *$(className)Context) (html string) {
 			return autoTpl.AxureCreate(ctx.Context, obj, "建立$(obj.label)", rowsInfo)
 		}
 		return autoTpl.Create(ctx.Context, obj, "建立$(obj.label)")
+	} else {
+		obj = m_$(modelsNamespace).New$(className)()
+#for field in $obj.fields
+	#if $field.defaultValue == "currentUser"
+		obj.$field.name.value = ctx.User.Id()
+	#end if
+#end for
 	}
 
 	if rowsInfo != nil {
-		return autoTpl.AxureCreate(ctx.Context, m_$(modelsNamespace).New$(className)(), "建立$(obj.label)", rowsInfo)
+		return autoTpl.AxureCreate(ctx.Context, obj, "建立$(obj.label)", rowsInfo)
 	}
 
-	return autoTpl.Create(ctx.Context, m_$(modelsNamespace).New$(className)(), "建立$(obj.label)")
+	return autoTpl.Create(ctx.Context, obj, "建立$(obj.label)")
 }
 
 func $(className)CreatePost(ctx *$(className)Context) (html string) {
