--- a/tmpl/go.tmpl
+++ b/tmpl/go.tmpl
@@ -130,11 +130,11 @@ func New$(obj.name.value)() *$obj.name.value {
 	rval := new($obj.name.value)
 	rval.isNew = true
 	rval.ID = bson.NewObjectId()
-	#for field in $obj.fields
-		#if $field.defaultValue
-			rval.$field.name.value = "$field.defaultValue"
-		#end if
-	#end for
+#for field in $obj.fields
+#if $field.defaultValue and $field.defaultValue != "currentUser"
+	rval.$field.name.value = "$field.defaultValue"
+#end if
+#end for
 
 	return rval
 }
